feat(cs-api): add subsystem read side
